--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
       font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
       width: 60rem;
       margin: 0 auto;
+      padding: 1rem 0;
       color: rgba(0, 0, 0, 0.84);
       line-height: 1.5;
+    }
+
+    .profile {
+      margin-right: 1rem;
+      border-radius: 50%;
+      height: 4rem;
+      vertical-align: middle;
     }
 
     h1,
@@ -26,7 +34,9 @@
 </head>
 
 <body>
+  <img class="profile" src="https://avatars0.githubusercontent.com/u/5502029">
   <h1>Typicode</h1>
+
 
   <h2>Patreon supporters</h2>
 
