--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
   <h3>Supporters
     <small><a href="https://www.patreon.com/bePatron?c=784328">$10/month</a></small>
   </h3>
+  <ul>
+    <li><a href="https://twitter.com/traversymedia">Traversy Media</a></li>
+    <li><a href="https://twitter.com/codepilotai">CodePilot.ai Team</a></li>
+    <li><a href="https://twitter.com/spentacular">Spencer Hamm</a></li>
+    <li><a href="https://twitter.com/levups">Clément Joubert</a></li>
+    <li><a href="https://twitter.com/ffdtm">Floyd Arguello</a></li>
+    <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</li>
+    <li><a href="https://twitter.com/liamdanger">Liam Campbell</a></li>
+    <li>R. J. Smith</li>
+    <li>Akash Shah</li>
+    <li><a href="https://twitter.com/voxpelli">Pelle Wessman</a></li>
+    <li>JSek</li>
+    <li>Yu-Chiang Hsu</li>
+    <li>Ako Tulu</li>
+    <li>Diana Lee</li>
+    <li>Bartleby</li>
+    <li><a href="https://twitter.com/GeekMustHave">GeekMustHave</a></li>
+  </ul>
 
   <!-- Become a patron -->
   <h2>Become a Patron</h2>
