--- a/index.html
+++ b/index.html
@@ -3,89 +3,120 @@
 <html>
 
 <head>
-  <title>Thanks</title>
+  <title>🌵 Thank you!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.min.css" />
   <style>
     body {
       font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-      width: 60rem;
+      width: 42rem;
       margin: 0 auto;
-      padding: 1rem 0;
+      padding: 0 1rem;
       color: rgba(0, 0, 0, 0.84);
       line-height: 1.5;
     }
 
-    .profile {
-      margin-right: 1rem;
-      border-radius: 50%;
-      height: 4rem;
-      vertical-align: middle;
+    a {
+      color: currentColor;
+      text-decoration: underline;
     }
 
-    h1,
-    h2,
-    h3 {
+    a:hover {
+      text-decoration: none;
+    }
+
+    h1 {
+      margin-top: 5rem;
+      margin-bottom: 3rem;
+      font-weight: 300;
+      letter-spacing: .2rem;
+    }
+
+    h2 {
+      margin-top: 5rem;
+      margin-bottom: 1rem;
+      font-size: 1.5rem;
       font-weight: 400;
+    }
+
+    small {
+      font-size: .75rem;
+    }
+
+    ul {
+      padding: 0;
+      list-style-type: none;
+    }
+
+    #update {
+      font-size: .75rem;
+      color: rgba(0, 0, 0, 0.5);
+      margin-bottom: 5rem;
     }
   </style>
 
 </head>
 
 <body>
-  <img class="profile" src="https://avatars0.githubusercontent.com/u/5502029">
-  <h1>Typicode</h1>
+  <h1>🌵 typicode</h1>
 
+  <p>
+    Below you'll find all the <strong>amazing people and companies</strong> 🔥 supporting the development of my Open Source
+    projects on
+    <a href="https://patreon.com/typicode">Patreon</a>.
+  </p>
 
-  <h2>Patreon supporters</h2>
+  <p>Huge thanks to them! ❤️</p>
 
-  <!-- Sponsors -->
-  <h3>Platinum Sponsors
-    <small><a href="https://www.patreon.com/bePatron?c=784328">$2000/month</a></small>
-  </h3>
-
-  <h3>Gold Sponsors <small><a href="https://www.patreon.com/bePatron?c=784328">$500/month</a></small></h3>
-
-  <h3>Silver Sponsors <small><a href="https://www.patreon.com/bePatron?c=784328">$200/month</a></small></h3>
-
-  <h3>Bronze Sponsors <small><a href="https://www.patreon.com/bePatron?c=784328">$100/month</a></small></h3>
+  <h2>Sponsors</h2>
+  <p>
+    <a href="https://tigersheet.com/" target="_blank">
+      <img src="https://i.imgur.com/RvvnNlB.png" height="60px">
+    </a>
+  </p>
 
   <!-- Supporters -->
-  <h3>Top Supporters
-    <small><a href="https://www.patreon.com/bePatron?c=784328">$50/month</a></small>
-  </h3>
-
-  <h3>Generous Supporters
-    <small><a href="https://www.patreon.com/bePatron?c=784328">$20/month</a></small>
-  </h3>
-
-  <h3>Supporters
-    <small><a href="https://www.patreon.com/bePatron?c=784328">$10/month</a></small>
-  </h3>
+  <h2>Top Supporters
+    <small><a href="https://www.patreon.com/bePatron?c=784328 ">$50/month</a></small>
+  </h2>
   <ul>
-    <li><a href="https://twitter.com/traversymedia">Traversy Media</a></li>
-    <li><a href="https://twitter.com/codepilotai">CodePilot.ai Team</a></li>
-    <li><a href="https://twitter.com/spentacular">Spencer Hamm</a></li>
-    <li><a href="https://twitter.com/levups">Clément Joubert</a></li>
-    <li><a href="https://twitter.com/ffdtm">Floyd Arguello</a></li>
-    <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</li>
-    <li><a href="https://twitter.com/liamdanger">Liam Campbell</a></li>
+    <li><a href="https://twitter.com/codepilotai ">CodePilot.ai Team</a></li>
+    <li><a href="https://twitter.com/spentacular ">Spencer Hamm</a></li>
+    <li><a href="https://twitter.com/levups ">Clément Joubert</a></li>
+  </ul>
+
+  <h2>Supporters
+    <small><a href="https://www.patreon.com/bePatron?c=784328 ">$10/month</a></small>
+  </h2>
+  <ul>
+    <li><a href="https://twitter.com/traversymedia ">Traversy Media</a></li>
+    <li><a href="https://twitter.com/ffdtm ">Floyd Arguello</a></li>
+    <li><a href="https://twitter.com/ossareh ">P. Michael Ossareh</li>
+    <li><a href="https://twitter.com/liamdanger ">Liam Campbell</a></li>
     <li>R. J. Smith</li>
     <li>Akash Shah</li>
-    <li><a href="https://twitter.com/voxpelli">Pelle Wessman</a></li>
+    <li><a href="https://twitter.com/voxpelli ">Pelle Wessman</a></li>
     <li>JSek</li>
     <li>Yu-Chiang Hsu</li>
     <li>Ako Tulu</li>
     <li>Diana Lee</li>
     <li>Bartleby</li>
-    <li><a href="https://twitter.com/GeekMustHave">GeekMustHave</a></li>
+    <li><a href="https://twitter.com/GeekMustHave ">GeekMustHave</a></li>
   </ul>
 
-  <!-- Become a patron -->
   <h2>Become a Patron</h2>
-  <p>Support my Open Source work by <a href="https://patreon.com/typicode">becoming a Patron</a></p>
-  <p><i>This page is updated on the first day of every month.</i></p>
+  <p>
+    You can support my Open Source projects by becoming a Patron.
+  </p>
+
+  <p>Thank you 🙏</p>
+
+  <p>
+    <a href="https://patreon.com/typicode"><img src="https://c5.patreon.com/external/logo/become_a_patron_button.png"></a>
+  </p>
+
+  <p id="update">This page is updated on the first day of every month.</p>
 </body>
 
 </html>
