--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <ul>
     <li><a href="https://twitter.com/codepilotai">CodePilot.ai Team</a></li>
     <li><a href="https://twitter.com/spentacular">Spencer Hamm</a></li>
-    <li><a href="https://twitter.com/levups">Clément Joubert</a></li>
+    <li><a href="https://twitter.com/levups">Level UP Solutions</a></li>
     <li><a href="https://twitter.com/ffdtm">Floyd Arguello</a></li>
     <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</li>
     <li><a href="https://twitter.com/liamdanger">Liam Campbell</a></li>
