--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     body {
       font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-      width: 42rem;
+      max-width: 42rem;
       margin: 0 auto;
       padding: 0 1rem;
       color: rgba(0, 0, 0, 0.84);
