--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
       margin-bottom: 5rem;
     }
   </style>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44497010-9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-44497010-9');
+  </script>
 </head>
 
 <body>
