--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
     h1 {
       margin-top: 5rem;
-      margin-bottom: 3rem;
       font-weight: 300;
       letter-spacing: .2rem;
     }
@@ -38,6 +37,10 @@
       margin-bottom: 1rem;
       font-size: 1.5rem;
       font-weight: 400;
+    }
+
+    img.patreon {
+      width: 160px;
     }
 
     small {
@@ -59,18 +62,18 @@
 </head>
 
 <body>
-  <h1>🌵 typicode</h1>
+  <h1>typicode 🌵</h1>
 
+  <h2>Thanks 🙌</h2>
   <p>
-    Below you'll find all the <strong>amazing people and companies</strong> 🔥 supporting the development of my Open
-    Source
-    projects on
-    <a href="https://patreon.com/typicode">Patreon</a>.
+    Below you'll find all the <strong>amazing people and companies</strong> 🔥 supporting the development of my <a href="https://github.com/typicode">Open
+      Source projects</a> on
+    <a href="https://www.patreon.com/typicode">Patreon</a>. Thank you!
   </p>
 
-  <p>Huge thanks to them! ❤️</p>
-
-  <h2>Sponsors</h2>
+  <h2>Sponsors
+    <small><a href="https://www.patreon.com/bePatron?c=784328">$500/month</a></small>
+  </h2>
   <p>
     <a href="https://tigersheet.com/" target="_blank">
       <img src="https://i.imgur.com/RvvnNlB.png" height="60px">
@@ -108,11 +111,11 @@
 
   <h2>Become a Patron</h2>
   <p>
-    You can support my Open Source projects by becoming a Patron.<br> Thank you!
+    You can support my Open Source projects by becoming a Patron.
   </p>
 
   <p>
-    <a href="https://patreon.com/typicode"><img src="https://c5.patreon.com/external/logo/become_a_patron_button.png"></a>
+    <a href="https://www.patreon.com/typicode"><img class="patreon" src="https://c5.patreon.com/external/logo/become_a_patron_button.png"></a>
   </p>
 
   <p id="update">This page is updated on the first day of every month.</p>
