--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <li>Yu-Chiang Hsu</li>
     <li>Ako Tulu</li>
     <li>Diana Lee</li>
+    <li><a href="http://dominicode.com">dominicode.com</a></li>
   </ul>
 
   <h2>Become a Patron</h2>
