--- a/index.html
+++ b/index.html
@@ -93,9 +93,6 @@
   <ul>
     <li><a href="https://twitter.com/codepilotai">CodePilot.ai Team</a></li>
     <li><a href="https://twitter.com/spentacular">Spencer Hamm</a></li>
-    <li><a href="https://twitter.com/levups">Level UP Solutions</a></li>
-    <li><a href="https://twitter.com/ffdtm">Floyd Arguello</a></li>
-    <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</li>
   </ul>
 
   <h2>Supporters
@@ -103,14 +100,8 @@
   </h2>
   <ul>
     <li><a href="https://twitter.com/traversymedia">Traversy Media</a></li>
-    <li>R. J. Smith</li>
-    <li>Akash Shah</li>
-    <li><a href="https://twitter.com/voxpelli">Pelle Wessman</a></li>
-    <li>JSek</li>
-    <li>Yu-Chiang Hsu</li>
-    <li>Ako Tulu</li>
-    <li>Diana Lee</li>
-    <li><a href="http://dominicode.com">dominicode.com</a></li>
+    <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</li>
+    <li><a href="https://dominicode.com">dominicode.com</a></li>
   </ul>
 
   <h2>Become a Patron</h2>
