--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <li><a href="https://twitter.com/traversymedia">Traversy Media</a></li>
     <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</li>
     <li><a href="https://dominicode.com">dominicode.com</a></li>
+    <li>Ben Foley</li>
   </ul>
 
   <h2>Become a Patron</h2>
