--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</li>
     <li><a href="https://dominicode.com">dominicode.com</a></li>
     <li>Ben Foley</li>
+    <li><a href="https://twitter.com/Isaac_Sogunro">Isaac Sogunro</a></li>
   </ul>
 
   <h2>Become a Patron</h2>
