--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     <small><a href="https://www.patreon.com/bePatron?c=784328">$500/month</a></small>
   </h2>
   <p>
+    <a href="https://tryretool.com/?utm_source=sponsor&utm_campaign=typicode" target="_blank">
+      <img src="https://i.imgur.com/IBItATn.png" height="60px">
+    </a>
   </p>
 
   <!-- Supporters -->
