--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <a href="https://www.patreon.com/typicode"><img class="patreon" src="https://c5.patreon.com/external/logo/become_a_patron_button.png"></a>
   </p>
 
-  <p id="update">This page is updated on the first day of every month.</p>
+  <!--<p id="update">This page is updated on the first day of every month.</p>-->
 </body>
 
 </html>
