--- a/index.html
+++ b/index.html
@@ -80,12 +80,21 @@
     <a href="https://www.patreon.com/typicode">Patreon</a>. Thank you!
   </p>
 
-  <h2>Sponsors
+  <h2>Gold sponsors
     <small><a href="https://www.patreon.com/bePatron?c=784328">$500/month</a></small>
   </h2>
   <p>
     <a href="https://tryretool.com/?utm_source=sponsor&utm_campaign=typicode" target="_blank">
       <img src="https://i.imgur.com/IBItATn.png" height="60px">
+    </a>
+  </p>
+  
+  <h2>Bronze sponsors
+    <small><a href="https://www.patreon.com/bePatron?c=784328">$100/month</a></small>
+  </h2>
+  <p>
+    <a href="https://www.zinggrid.com/?utm_source=jsonserver&utm_medium=github&utm_campaign=sponsorship" target="_blank">
+      <img src="https://i.imgur.com/3mJGTAQ.png" height="30px">
     </a>
   </p>
 
