--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <li><a href="https://dominicode.com">dominicode.com</a></li>
     <li>Ben Foley</li>
     <li><a href="https://twitter.com/Isaac_Sogunro">Isaac Sogunro</a></li>
+    <li><a href="http://cyzachar.me">Cynthia Zachar</a></li>
   </ul>
 
   <h2>Become a Patron</h2>
