--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <li>Ben Foley</li>
     <li><a href="https://twitter.com/Isaac_Sogunro">Isaac Sogunro</a></li>
     <li><a href="http://cyzachar.me">Cynthia Zachar</a></li>
+    <li><a href="https://jsherz.com">James Sherwood-Jones</a></li>
   </ul>
 
   <h2>Become a Patron</h2>
