--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     <li><a href="http://cyzachar.me">Cynthia Zachar</a></li>
     <li><a href="https://jsherz.com">James Sherwood-Jones</a></li>
     <li><a href="http://jillella.com/">Venkata Jillella</a></li>
+    <li>Tomasz Mikolajewicz</li>
   </ul>
 
   <h2>Become a Patron</h2>
