--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <small><a href="https://www.patreon.com/bePatron?c=784328">$100/month</a></small>
   </h2>
   <p>
-    <a href="https://www.zinggrid.com/?utm_source=jsonserver&utm_medium=github&utm_campaign=sponsorship" target="_blank">
+    <a href="https://www.zinggrid.com/hello/json-server?utm_source=jsonserver&utm_medium=github&utm_campaign=sponsorship" target="_blank">
       <img src="https://i.imgur.com/3mJGTAQ.png" height="30px">
     </a>
   </p>
