--- a/index.html
+++ b/index.html
@@ -1,137 +1,185 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <title>Thank you!</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.min.css"
+    />
+    <style>
+      body {
+        font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI,
+          Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+          Helvetica Neue, sans-serif;
+        color: #3b4252;
+        line-height: 1.5;
+      }
 
-<head>
-  <title>🌵 Thank you!</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.min.css" />
-  <style>
-    body {
-      font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-      max-width: 42rem;
-      margin: 0 auto;
-      padding: 0 1rem;
-      color: rgba(0, 0, 0, 0.84);
-      line-height: 1.5;
-    }
+      .container {
+        max-width: 42rem;
+        margin: 0 auto;
+        padding: 0 1rem;
+      }
 
-    a {
-      color: currentColor;
-      text-decoration: underline;
-    }
+      .line {
+        height: 5px;
+        margin-bottom: 2rem;
+        background: #2e3440;
+        color: #eceff4;
+      }
 
-    a:hover {
-      text-decoration: none;
-    }
+      .message {
+        padding: 0.2rem 1rem;
+        border-radius: 0.5rem;
+        background: #eceff4;
+      }
 
-    h1 {
-      margin-top: 5rem;
-      font-weight: 300;
-      letter-spacing: .2rem;
-    }
+      .message p {
+        margin: 0.5rem 0;
+      }
 
-    h2 {
-      margin-top: 5rem;
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
-      font-weight: 400;
-    }
+      a {
+        color: currentColor;
+        text-decoration: underline;
+      }
 
-    img.patreon {
-      width: 160px;
-    }
+      a:hover {
+        text-decoration: none;
+      }
 
-    small {
-      font-size: .75rem;
-    }
+      h2 {
+        margin-top: 4rem;
+        margin-bottom: 1rem;
+        font-size: 1.5rem;
+        font-weight: 400;
+      }
 
-    ul {
-      padding: 0;
-      list-style-type: none;
-    }
+      img.patreon {
+        width: 160px;
+      }
 
-    #update {
-      font-size: .75rem;
-      color: rgba(0, 0, 0, 0.5);
-      margin-bottom: 5rem;
-    }
-  </style>
-  
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44497010-9"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+      small {
+        font-size: 0.75rem;
+      }
 
-    gtag('config', 'UA-44497010-9');
-  </script>
-</head>
+      ul {
+        padding: 0;
+        list-style-type: none;
+      }
 
-<body>
-  <h1>typicode 🌵</h1>
+      #update {
+        font-size: 0.75rem;
+        color: rgba(0, 0, 0, 0.5);
+        margin-bottom: 5rem;
+      }
+    </style>
 
-  <h2>Thanks 🙌</h2>
-  <p>
-    Below you'll find all the <strong>amazing people and companies</strong> 🔥 supporting the development of my <a href="https://github.com/typicode">Open
-      Source projects</a> on
-    <a href="https://www.patreon.com/typicode">Patreon</a>. Thank you!
-  </p>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-44497010-9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  <h2>Gold sponsors
-    <small><a href="https://www.patreon.com/bePatron?c=784328">$500/month</a></small>
-  </h2>
-  <p>
-    <a href="https://tryretool.com/?utm_source=sponsor&utm_campaign=typicode" target="_blank">
-      <img src="https://i.imgur.com/IBItATn.png" height="60px">
-    </a>
-  </p>
-  
-  <h2>Bronze sponsors
-    <small><a href="https://www.patreon.com/bePatron?c=784328">$100/month</a></small>
-  </h2>
-  <p>
-    <a href="https://www.zinggrid.com/hello/json-server?utm_source=jsonserver&utm_medium=github&utm_campaign=sponsorship" target="_blank">
-      <img src="https://i.imgur.com/3mJGTAQ.png" height="30px">
-    </a>
-  </p>
+      gtag("config", "UA-44497010-9");
+    </script>
+  </head>
 
-  <!-- Supporters -->
-  <h2>Top Supporters
-    <small><a href="https://www.patreon.com/bePatron?c=784328">$50/month</a></small>
-  </h2>
-  <ul>
-    <li><a href="https://twitter.com/codepilotai">CodePilot.ai Team</a></li>
-    <li><a href="https://twitter.com/spentacular">Spencer Hamm</a></li>
-  </ul>
+  <body>
+    <div class="line"></div>
+    <div class="container">
+      <div class="message">
+        <p>
+          Below you'll find all the
+          <strong>amazing people and companies</strong> supporting the
+          development of my
+          <a href="https://github.com/typicode">Open Source projects</a> on
+          <a href="https://www.patreon.com/typicode">Patreon</a>. Thank you!
+        </p>
+        <p><i>~ Typicode</i></p>
+      </div>
+      <h2>
+        Gold sponsors
+        <small>
+          <a href="https://www.patreon.com/bePatron?c=784328">$500/month</a>
+        </small>
+      </h2>
+      <p>
+        <a
+          href="https://tryretool.com/?utm_source=sponsor&utm_campaign=typicode"
+          target="_blank"
+        >
+          <img src="https://i.imgur.com/IBItATn.png" height="60px" />
+        </a>
+      </p>
 
-  <h2>Supporters
-    <small><a href="https://www.patreon.com/bePatron?c=784328">$10/month</a></small>
-  </h2>
-  <ul>
-    <li><a href="https://twitter.com/traversymedia">Traversy Media</a></li>
-    <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</li>
-    <li><a href="https://dominicode.com">dominicode.com</a></li>
-    <li>Ben Foley</li>
-    <li><a href="https://twitter.com/Isaac_Sogunro">Isaac Sogunro</a></li>
-    <li><a href="http://cyzachar.me">Cynthia Zachar</a></li>
-    <li><a href="https://jsherz.com">James Sherwood-Jones</a></li>
-    <li><a href="http://jillella.com/">Venkata Jillella</a></li>
-    <li>Tomasz Mikolajewicz</li>
-  </ul>
+      <h2>
+        Bronze sponsors
+        <small>
+          <a href="https://www.patreon.com/bePatron?c=784328">$100/month</a>
+        </small>
+      </h2>
+      <p>
+        <a
+          href="https://www.zinggrid.com/hello/json-server?utm_source=jsonserver&utm_medium=github&utm_campaign=sponsorship"
+          target="_blank"
+        >
+          <img src="https://i.imgur.com/3mJGTAQ.png" height="30px" />
+        </a>
+      </p>
 
-  <h2>Become a Patron</h2>
-  <p>
-    You can support my Open Source projects by becoming a Patron.
-  </p>
+      <!-- Supporters -->
+      <h2>
+        Top Supporters
+        <small>
+          <a href="https://www.patreon.com/bePatron?c=784328">$50/month</a>
+        </small>
+      </h2>
+      <ul>
+        <li><a href="https://twitter.com/codepilotai">CodePilot.ai Team</a></li>
+        <li><a href="https://twitter.com/spentacular">Spencer Hamm</a></li>
+      </ul>
 
-  <p>
-    <a href="https://www.patreon.com/typicode"><img class="patreon" src="https://c5.patreon.com/external/logo/become_a_patron_button.png"></a>
-  </p>
+      <h2>
+        Supporters
+        <small>
+          <a href="https://www.patreon.com/bePatron?c=784328">$10/month</a>
+        </small>
+      </h2>
+      <ul>
+        <li><a href="https://twitter.com/traversymedia">Traversy Media</a></li>
+        <li><a href="https://twitter.com/ossareh">P. Michael Ossareh</a></li>
+        <li><a href="https://dominicode.com">dominicode.com</a></li>
+        <li>Ben Foley</li>
+        <li><a href="https://twitter.com/Isaac_Sogunro">Isaac Sogunro</a></li>
+        <li><a href="http://cyzachar.me">Cynthia Zachar</a></li>
+        <li><a href="https://jsherz.com">James Sherwood-Jones</a></li>
+        <li><a href="http://jillella.com/">Venkata Jillella</a></li>
+        <li>Tomasz Mikolajewicz</li>
+      </ul>
 
-  <!--<p id="update">This page is updated on the first day of every month.</p>-->
-</body>
+      <h2>Become a Patron</h2>
+      <p>
+        You can support my Open Source projects by becoming a Patron.
+      </p>
 
+      <p>
+        <a href="https://www.patreon.com/typicode">
+          <img
+            class="patreon"
+            src="https://c5.patreon.com/external/logo/become_a_patron_button.png"
+          />
+        </a>
+      </p>
+    </div>
+    <!--<p id="update">This page is updated on the first day of every month.</p>-->
+  </body>
 </html>
