--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
         </small>
       </h2>
       <ul>
-        <li><a href="https://twitter.com/codepilotai">CodePilot.ai Team</a></li>
         <li><a href="https://twitter.com/spentacular">Spencer Hamm</a></li>
       </ul>
 
@@ -160,10 +159,12 @@
         <li><a href="https://dominicode.com">dominicode.com</a></li>
         <li>Ben Foley</li>
         <li><a href="https://twitter.com/Isaac_Sogunro">Isaac Sogunro</a></li>
-        <li><a href="http://cyzachar.me">Cynthia Zachar</a></li>
         <li><a href="https://jsherz.com">James Sherwood-Jones</a></li>
         <li><a href="http://jillella.com/">Venkata Jillella</a></li>
+        <li>Jake Stinson</li>
         <li>Tomasz Mikolajewicz</li>
+        <li>Bruno Conde Souza</li>
+        <li>Gregory Hayes</li>
       </ul>
 
       <h2>Become a Patron</h2>
