--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <li>Tomasz Mikolajewicz</li>
         <li>Bruno Conde Souza</li>
         <li>Gregory Hayes</li>
+        <li><a href="http://www.aksel.com/">Andrew MacNeill</a></li>
       </ul>
 
       <h2>Become a Patron</h2>
