--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
           <img src="https://i.imgur.com/3mJGTAQ.png" height="30px" />
         </a>
       </p>
+      <p>
+        <a href="https://writersperhour.com" target="_blank">
+          <img src="https://i.imgur.com/JxoFkAr.png" height="30px">
+        </a>
+      </p>
 
       <!-- Supporters -->
       <h2>
