--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         <li>Bruno Conde Souza</li>
         <li>Gregory Hayes</li>
         <li><a href="http://www.aksel.com/">Andrew MacNeill</a></li>
+        <li>Rollin Crittendon</li>
       </ul>
 
       <h2>Become a Patron</h2>
